2012-12-17  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: Recover gracefully if setlocale() returns NULL
	like on Android (#204).

2012-12-07  Frank Warmerdam  <warmerdam@pobox.com>

	* src/geod*: Replace geodesic implementation with one from
	Charles Karney, add public interface (#197).

2012-12-05  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgraded to EPSG 8.0.

2012-07-24  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridcatalog.c, src/makefile.vc: fixes for visual studio
	builds (#182).

2012-07-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: Incorporate a polar fix (#176).

2012-06-27  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad2bin.c: Fix byte swapping for bigendian platforms (#157)

2012-06-07  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_init.c: avoid leaking vgridlist_geoid (#175).

2012-06-01  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

	* Removed the old JNI wrappers from trunk. Those wrappers are
	still present on the 4.8 branch as deprecated classes.

2012-05-31  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

	* Replaced usages of NAN C/C++ constant by the java.lang.Double.NaN constant.
	This was done because not all C/C++ compilers define the NAN constant, and for
	making sure that the bits pattern is exactly the one expected by Java.

2012-03-25  Frank Warmerdam  <warmerdam@pobox.com>

	* src/Makefile.am: Add org_proj4_PJ.h to files to distribute.

2012-03-13  Frank Warmerdam  <warmerdam@google.com>

	* src/projects.h, src/pj_list.c: avoid using #include directly on a
	macro expansion - it is unnecessary and makes for problems in my work
	environment.

2012-03-06  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.8.0 release candidate.

	* nad/epsg: regenerate with +no_uoff for hotine oblique mercator (#104)

	* src/PJ_sconics.c: Fix missing P->sig term in pconic forward
	projection equation (#148).

2012-03-03  Frank Warmerdam  <warmerdam@pobox.com>
